fix timestamps getting cutoff and hover hightlight not working

--- a/src/injected-content/scss/_theatermode.scss
+++ b/src/injected-content/scss/_theatermode.scss
@@ -48,8 +48,15 @@ body.theaterMode {
         background: #0c0c0c !important;
     }
 
+    [class^="timeStamp"] {
+        height: unset !important;
+    }
+    
     [class*="striped_"] [class*="message_"][class*="odd_"] {
         background-color: #000000;
+        &:hover {
+            background-color: hsla(0,0%,100%,.05);
+        }
     }
 
     [class*="message_"] {
@@ -57,8 +64,10 @@ body.theaterMode {
     }
 
     .chat-mention-bg .user-mentioned, .chat-keyword-bg .keyword-mentioned {
-        background-color: rgb(0, 0, 0) !important;
-        background-image: linear-gradient(45deg, rgba(0, 117, 213, 0.05) 40px, rgba(12, 91, 178, 0.21) 40px, rgba(12, 91, 178, 0) 80px, rgba(24, 62, 141, 0.25) 80px, rgba(24, 62, 141, 0.05) 120px, rgba(12, 47, 111, 0.13) 120px, rgba(12, 47, 111, 0.03) 160px, rgba(0, 32, 80, 0.01) 160px), linear-gradient(-45deg, rgba(0, 117, 213, 0.15) 40px, rgba(12, 91, 178, 0.25) 40px, rgba(12, 91, 178, 0.15) 80px, rgba(24, 62, 141, 0.25) 80px, rgba(24, 62, 141, 0.18) 120px, rgba(12, 47, 111, 0.25) 120px, rgba(12, 47, 111, 0.25) 160px, rgba(0, 32, 80, 0.33) 160px) !important;
+        background-color: #ffffff14 !important;
+        background-image: none !important;
+        //background-color: rgb(0, 0, 0) !important;
+        //background-image: linear-gradient(45deg, rgba(0, 117, 213, 0.05) 40px, rgba(12, 91, 178, 0.21) 40px, rgba(12, 91, 178, 0) 80px, rgba(24, 62, 141, 0.25) 80px, rgba(24, 62, 141, 0.05) 120px, rgba(12, 47, 111, 0.13) 120px, rgba(12, 47, 111, 0.03) 160px, rgba(0, 32, 80, 0.01) 160px), linear-gradient(-45deg, rgba(0, 117, 213, 0.15) 40px, rgba(12, 91, 178, 0.25) 40px, rgba(12, 91, 178, 0.15) 80px, rgba(24, 62, 141, 0.25) 80px, rgba(24, 62, 141, 0.18) 120px, rgba(12, 47, 111, 0.25) 120px, rgba(12, 47, 111, 0.25) 160px, rgba(0, 32, 80, 0.33) 160px) !important;
     }
 }
 
